remove useless schemas

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mintpass-an-nft-gatekeeper",
+  "name": "the-ritvik-blog",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
